<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/characterListFragment">


    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.rickrip.rickandmortyappv2.characters.CharacterListFragment"
        android:label="@string/fragment_character_list_label"
        tools:layout="@layout/fragment_character_list">
        <action
            android:id="@+id/action_characterListFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/characterDetailFragment"
        android:name="com.rickrip.rickandmortyappv2.characters.detail.CharacterDetailsFragment"
        android:label="@string/fragment_character_details_label"
        tools:layout="@layout/fragment_character_detail">

        <argument
            android:name="characterId"
            android:defaultValue="-1"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/locationListFragment"
        android:name="com.rickrip.rickandmortyappv2.locations.LocationListFragment"
        android:label="@string/fragment_location_list_label"
        tools:layout="@layout/fragment_location_list">

    </fragment>

    <fragment
        android:id="@+id/episodeListFragment"
        android:name="com.rickrip.rickandmortyappv2.episodes.EpisodeListFragment"
        android:label="@string/fragment_episode_list_label"
        tools:layout="@layout/fragment_episode_list">

    </fragment>

    <fragment
        android:id="@+id/characterSearchFragment"
        android:name="com.rickrip.rickandmortyappv2.characters.search.CharacterSearchFragment"
        android:label="@string/fragment_character_search_label"
        tools:layout="@layout/fragment_character_search">

        <action
            android:id="@+id/action_characterSearchFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>




</navigation>